--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <button id="bb-cancel" href="#">Cancel Subscription</button>
 
     <!-- Chargebee Growth + Retention Script -->
+    <script
+  type="text/javascript"
+  src="https://app.retention.chargebee.com/js/current/?compiled=true"></script>
+<script type="text/javascript">
+  if (window.Brightback) {
+    window.Brightback.handleData({
+      app_id: EPoARP3Dxn 
+      subscription_id: Azq8pVUg4zUo52EP 
+    });
+  }
+</script>
     <script>
+        
   (function () {
     function getQueryParam(param) {
         const urlParams = new URLSearchParams(window.location.search);
